k8s/Concepts/Gateway API/1.Route-Traffic/gateway/gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway 
metadata:
  name: cafe
  namespace: starbucks
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
