k8s/Concepts/Gateway API/1.Route-Traffic/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coffee
  namespace: starbucks
spec:
  parentRefs:
    - name: cafe
  hostnames:
    - "cafe.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: coffee-svc
          port: 80
